updated portfolio site to include API races app

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,15 @@
                 <p><span class="titles">GitHub Repo:</span><a href="https://github.com/smhussain1/Chess-Quiz-App">GitHub</a></p>
                 <p><span class="titles">Application:</span><a href="https://smhussain1.github.io/Chess-Quiz-App/">Chess Quiz Application</a></p>
             </section>
-            <div class="project-photo"></div> <!--Change to div from section-->
+            <div class="project-photo-chess"></div> <!--Change to div from section-->
+            <section class="project-details">
+                <p><span class="titles">Project Title:</span>   Endurance Race API Project</p>
+                <p><span class="titles">Description:</span>     An application that enables users to select from a list a race they would like to see videos of</p>
+                <p><span class="titles">Skills:</span>          HTML, CSS, JavaScipt, JQuery, GIT/GITHub</p>
+                <p><span class="titles">GitHub Repo:</span><a href="https://github.com/smhussain1/enduranceRacesAPIProject">GitHub</a></p>
+                <p><span class="titles">Application:</span><a href="https://smhussain1.github.io/enduranceRacesAPIProject/">Chess Quiz Application</a></p>
+            </section>
+            <div class="project-photo-race"></div> <!--Change to div from section-->
         </section>
         
         <ul class="cities">
